<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:padding="10dp"
    android:id="@+id/checkbox_container"
    >

    <LinearLayout
        android:id="@+id/linearLayout_checkBox1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <CheckBox
            android:id="@+id/search_articles_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arts"
            android:tag="arts"
            />

        <CheckBox
            android:id="@+id/search_articles_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business"
            android:tag="business"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <CheckBox
            android:id="@+id/search_articles_politics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politics"
            android:tag="politics"
            />

        <CheckBox
            android:id="@+id/search_articles_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:tag="sports"
            />

        <CheckBox
            android:id="@+id/search_articles_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel"
            android:tag="travel"
            />

    </LinearLayout>
</LinearLayout>